--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
 		"ai": "^5.0.86",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
+		"hono": "^4.10.6",
 		"marked": "^16.4.1",
 		"react": "^19.2.0",
 		"react-dom": "^19.2.0",
