--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
 	"scripts": {
 		"start": "vite dev",
 		"deploy": "vite build && wrangler deploy",
+		"deploy:migrate": "npm run deploy && npm run d1:apply",
+		"d1:apply": "bash ./scripts/d1/apply_migrations.sh",
+		"d1:setup": "bash ./scripts/d1/deploy_and_seed.sh",
 		"test": "vitest",
 		"types": "wrangler types env.d.ts --include-runtime false",
 		"format": "prettier --write .",
