--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
 		"ai",
 		"agents"
 	],
-	"author": "",
+	"author": "ramyalakshmi.ks@gmail.com",
 	"license": "MIT",
 	"devDependencies": {
 		"@biomejs/biome": "^2.3.2",
